# showmypictures

./: CMakeLists.txt  Config.vala.cmake  README.md  uncrustify.cfg
data/: CMakeLists.txt  com.github.artemanufrij.showmypictures.appdata.xml  com.github.artemanufrij.showmypictures.desktop
debian/: changelog  control
po/: be.po  com.github.artemanufrij.showmypictures.pot  cs.po  fr.po  gl.po  it.po  ja.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  sk.po  sl.po  sn.po  uk.po  vi.po
schemas/: CMakeLists.txt  com.github.artemanufrij.showmypictures.gschema.xml
src/: Application.vala  CMakeLists.txt  FastViewWindow.vala  MainWindow.vala  MainWindow.vala~  Settings.vala
src/Dialogs/: AlbumEditor.vala  Preferences.vala
src/Objects/: Album.vala  Album.vala~  ExternalDevice.vala  GphotoDevice.vala  MobilePhone.vala  Picture.vala  RemovableDevice.vala
src/Popovers/: Rename.vala
src/Services/: DataBaseManager.vala  DataBaseManager.vala~  DeviceManager.vala  LibraryManager.vala  LibraryManager.vala~  LocalFilesManager.vala
src/Utils/: Exiv2.vala  Pixbuf.vala  UI.vala  Utils.vala
src/Widgets/: Album.vala  DuplicateRow.vala  MobilePhone.vala  NavigationAlbum.vala  NavigationBar.vala  NavigationDate.vala  NavigationExternalDevice.vala  NavigationLabel.vala  NavigationMobilePhone.vala  NavigationNotFound.vala  Picture.vala
src/Widgets/Views/: AlbumView.vala  AlbumsView.vala  DuplicatesView.vala  NotFoundView.vala  PictureDetails.vala  PictureView.vala  Welcome.vala
vapi/: gexiv2.vapi  libexif.vapi
